// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Button Base 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn-base"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Button Blank 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-blank"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Button Overrides 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn my-custom-css-klass"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Button Type Reset 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn"
    type="reset"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Button Type Submit 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn"
    type="submit"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Default Bordered 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-bordered"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Default Bordered Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-bordered btn-rounded"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Default Circle 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-circle btn-rounded"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Default Raised 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-raised"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Default Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-rounded"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn disabled"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Groups Button Group 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group"
    role="group"
  >
    <button
      class="btn"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn"
      type="button"
    >
      Three
    </button>
  </div>
   
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group"
    role="group"
  >
    <button
      class="btn btn-primary"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn btn-primary"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn btn-primary"
      type="button"
    >
      Three
    </button>
  </div>
   
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group"
    role="group"
  >
    <button
      class="btn btn-secondary"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn btn-secondary"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn btn-secondary"
      type="button"
    >
      Three
    </button>
  </div>
   
  <div
    style="margin-bottom: 40px;"
  />
   
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group"
    role="group"
  >
    <button
      class="btn btn-primary btn-bordered"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn btn-primary btn-bordered"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn btn-primary btn-bordered"
      type="button"
    >
      Three
    </button>
  </div>
   
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group"
    role="group"
  >
    <button
      class="btn btn-secondary btn-bordered"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn btn-secondary btn-bordered"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn btn-secondary btn-bordered"
      type="button"
    >
      Three
    </button>
  </div>
</section>
`;

exports[`Storyshots Button Icons Button Icons 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    style="display: inline-flex;"
  >
    <button
      class="btn btn-primary btn-rounded"
      type="button"
    >
      Download
    
      <svg
        aria-hidden="true"
        class="btn-icon-right"
        data-custom-icon="true"
        fill="currentColor"
        focusable="false"
        height="14px"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        version="1.1"
        viewBox="0 0 16 16"
        width="14px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <desc>
          Download icon graphic
        </desc>
        <path
          d="M14 11v2h-12v-2h-2v4h16v-4zM12 6h-3v-5h-2v5h-3l4 6z"
        />
      </svg>
    </button>
     
    <button
      class="btn btn-primary btn-rounded"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="btn-icon-left"
        data-custom-icon="true"
        fill="currentColor"
        focusable="false"
        height="14px"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        version="1.1"
        viewBox="0 0 16 16"
        width="14px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <desc>
          Phone icon graphic
        </desc>
        <path
          d="M11 10c-1 1-1 2-2 2s-2-1-3-2-2-2-2-3 1-1 2-2-2-4-3-4-3 3-3 3c0 2 2.055 6.055 4 8s6 4 8 4c0 0 3-2 3-3s-3-4-4-3z"
        />
      </svg>
      
    Call
    </button>
  </div>
</section>
`;

exports[`Storyshots Button Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-large"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Block 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-block"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Bordered 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-bordered"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Bordered Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-bordered btn-rounded"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Circle 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-bordered btn-circle"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-rounded"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Rounded Raised 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-rounded btn-raised"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-circle"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Secondary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Secondary Bordered 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-bordered"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Secondary Bordered Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-bordered btn-rounded"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Secondary Circle 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-circle"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Secondary Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-rounded"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Secondary Rounded Raised 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-rounded btn-raised"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-small"
    type="button"
  >
    <span>
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Cards Card 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="card"
  >
    <div
      class="custom-wrap"
      style="flex: 1;"
    >
      <h1>
        Default Card
      </h1>
    </div>
     
    <div
      class="custom-wrap"
      style="flex: 2;"
    >
      <p>
        This card comes with some
      
        <span
          class="quoted"
        >
          skinning css
        </span>
        
      included. Also, it's a flex container with direction of
      
        <i>
          row
        </i>
        
      , so each child with a
      
        <i>
          flex
        </i>
        
      rule with get placed as a sort of column in the row (until the viewport is
      shrunk below a certain breakpoint and then it will stack).
      </p>
    </div>
  </div>
   
  <div
    class="card card-stacked"
  >
    <div
      class="custom-wrap"
    >
      <h1
        style="flex: 1; display: flex; justify-content: center;"
      >
        Stacked Card
      </h1>
       
      <div
        style="flex 1;"
      >
        <p>
          This card comes with some
        
          <span
            class="quoted"
          >
            skinning css
          </span>
          
        included. Also, it's a flex container with direction of
        
          <i>
            column
          </i>
          
        , so each child with a
        
          <i>
            flex
          </i>
          
        rule with get placed as a sort of row in the stack.
        </p>
      </div>
    </div>
  </div>
   
  <div
    class="card-base"
  >
    <div
      class="custom-card custom-wrap"
    >
      <h1>
        Card With No Skinning
      </h1>
       
      <p>
        This card omits any
      
        <span
          class="quoted"
        >
          skinning css
        </span>
        
      but includes the base or core CSS. So, we can style it without the need to
      resort to css custom theming at all -- we simply define our own customized
      styles. It does come with some base styles but hopefully not too
      opinionated for your use case.
      </p>
    </div>
  </div>
</section>
`;

exports[`Storyshots FlexGrid Grid 1`] = `
<section
  class="storybook-snapshot-container"
>
  <section>
    <div
      class="flexgrid-container custom-grid-klass"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-12 col-xs-12 col-sm-4 col-lg-6 col-xl-4"
        >
          <p>
            xs=12 sm=4 lg=6 xl=4
          </p>
        </div>
         
        <div
          class="col-xs-12 col-xs-12 col-sm-4 col-lg-6 col-xl-8"
        >
          <p>
            xs=12 sm=4 lg=6 xl=8
          </p>
        </div>
      </div>
    </div>
  </section>
   
  <section>
    <div
      class="flexgrid-container customKlass1 customKlass2"
    >
      <div
        class="row reverse-true"
      >
        <h1>
          test
        </h1>
      </div>
    </div>
  </section>
   
  <section>
    <div
      class="flexgrid-container"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-2"
        >
          <p>
            sm="2"
          </p>
        </div>
         
        <div
          class="col-sm-2 col-sm-offset-1"
        >
          <p>
            sm=2 smOffset=1
          </p>
        </div>
         
        <div
          class="col-sm-2 col-sm-offset-1"
        >
          <p>
            sm=2 smOffset=1
          </p>
        </div>
         
        <div
          class="col-sm-2 col-sm-offset-2"
        >
          <p>
            sm=2 smOffset=2
          </p>
        </div>
      </div>
    </div>
  </section>
   
  <section>
    <h1>
      Row attributes test. Maybe ignore this ;)
    </h1>
     
    <div
      class="flexgrid-container custom-grid-klass"
    >
      <div
        class="row start-sm center-md end-lg top-xl middle-xs bottom-xs around-sm between-lg"
      />
    </div>
  </section>
</section>
`;

exports[`Storyshots Header Example Header Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="header header-sticky"
  >
    <div
      class="header-content"
    >
      <div
        slot="logoleft"
      >
        logo left
      </div>
       
       
      <nav>
        <ul
          class="header-nav nav-overrides"
        >
          <li
            class="header-nav-item"
          >
            <a
              href="#home"
            >
              Home
            </a>
          </li>
           
          <li
            class="header-nav-item"
          >
            <a
              href="#products"
            >
              Products
            </a>
          </li>
           
          <li
            class="header-nav-item"
          >
            <a
              href="#services"
            >
              Services
            </a>
          </li>
           
          <li
            class="header-nav-item"
          >
            <a
              href="#about"
            >
              About
            </a>
          </li>
        </ul>
      </nav>
       
       
      <div
        slot="logoright"
      >
        logo right
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Progress Progress CSS 1`] = `
<section
  class="storybook-snapshot-container"
>
  <progress
    class="progress foo-bar-baz"
    max="100"
    value="30"
  />
</section>
`;

exports[`Storyshots Progress Progress Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <progress
    class="progress"
    max="100"
    value="30"
  />
</section>
`;
